Fix .gitignore to not exclude dist/ folder
The dist/ folder should be included in git because:
- This is a published npm package
- package.json points to dist/index.js and dist/index.d.ts
- Consumers get built files directly from npm
- Faster installs without requiring build tools

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build output
-dist/
+# Build output (commented out because this package includes dist/ in published version)
+# dist/
 *.tsbuildinfo
 
 # IDE and editor files
